# miguel

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
miguel/: cli.py  client.py  container.py  runner.py
miguel/agent/: README.md  architecture.md  capabilities.json  config.py  core.py  improvements.md  prompts.py  prompts.py.bak  server.py
miguel/agent/tools/: capability_tools.py  context_tools.py  dep_tools.py  error_utils.py  recovery_tools.py  tool_creator.py
