[project]
name = "miguel"
version = "0.1.0"
description = "A self-improving AI agent"
requires-python = ">=3.11"
dependencies = [
    "agno",
    "anthropic",
    "typer[all]",
    "rich",
    "python-dotenv",
    "sqlalchemy",
    "aiosqlite",
]

[project.scripts]
miguel = "miguel.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
